# builder

./: .envrc  .forkman.yaml  .gitignore  .studiorc  Cargo.toml  DEVELOPING.md  ON_CALL.md  README.md  build.ps1  build.sh
.github/workflows/: forkman.yml  release.yml
ci/: Makefile  pipeline.sh  upload.sh
components/: libbuild.rs
components/artifactory-client/: Cargo.toml
components/artifactory-client/src/: client.rs  config.rs  error.rs  lib.rs
components/builder-api/: Cargo.toml  README.md
components/builder-api-proxy/habitat/: default.toml  plan.sh
components/builder-api-proxy/habitat-dev/: plan.sh
components/builder-api/doc/: api.raml
components/builder-api/habitat/: default.toml  plan.sh
components/builder-api/habitat/hooks/: run
components/builder-api/src/: config.rs  lib.rs  main.rs
components/builder-api/src/server/: authorize.rs  error.rs  helpers.rs  migrations.rs  mod.rs  provision.rs
components/builder-api/src/server/framework/: headers.rs  middleware.rs
components/builder-api/src/server/migrations/: encrypt_secret_keys.rs
components/builder-api/src/server/resources/: authenticate.rs  channels.rs  ext.rs  jobs.rs  notify.rs  origins.rs  pkgs.rs  profile.rs  projects.rs  settings.rs  user.rs
components/builder-api/src/server/services/: github.rs  memcache.rs  metrics.rs  s3.rs
components/builder-core/: Cargo.toml
components/builder-core/src/: access_token.rs  api_client.rs  build_config.rs  crypto.rs  error.rs  http_client.rs  integrations.rs  job.rs  keys.rs  lib.rs  logger.rs  metrics.rs  package_graph.rs  privilege.rs  rdeps.rs  rpc.rs  socket.rs  target_graph.rs
components/builder-datastore/: plan.sh
components/builder-datastore/config/: pg_hba.conf
components/builder-db/: Cargo.toml
components/builder-db/src/: config.rs  diesel_pool.rs  error.rs  lib.rs  metrics.rs  migration.rs  pool.rs  test.rs
components/builder-db/src/migrations/2018-10-09-192420_origin_package_channels/: up.sql
components/builder-db/src/migrations/2018-10-31-233453_more_enums/: up.sql
components/builder-db/src/models/: channel.rs  jobs.rs  migration_support.rs  origin.rs  package.rs  secrets.rs
components/builder-db/tests/db/: start.sh
components/builder-events/: Cargo.toml
components/builder-events/src/: connection.rs  event.rs
components/builder-graph/: Cargo.toml  README.md
components/builder-graph/habitat/: plan.sh
components/builder-graph/src/: acyclic_package_graph.rs  acyclic_rdeps.rs  config.rs  cyclic_package_graph.rs  data_store.rs  error.rs  graph_helpers.rs  ident_graph.rs  lib.rs  main.rs  package_build_manifest_graph.rs  package_graph.rs  package_graph_target.rs  package_graph_trait.rs  package_ident_intern.rs  package_info.rs  rdeps.rs  target_graph.rs  util.rs
components/builder-jobsrv/: Cargo.toml  TODO.org
components/builder-jobsrv/habitat/: plan.sh
components/builder-jobsrv/src/: config.rs  data_store.rs  error.rs  lib.rs  main.rs  scheduler_datastore.rs  (+1 more)
components/builder-memcached/: plan.sh
components/builder-minio/: README.md  docker-compose.yml
components/builder-notify/: Cargo.toml
components/builder-notify/habitat/: plan.sh
components/builder-notify/src/: config.rs  main.rs  server.rs
components/builder-protocol/: Cargo.toml
components/builder-protocol/protocols/: jobsrv.proto  originsrv.proto
components/builder-protocol/src/: error.rs  jobsrv.rs  lib.rs  net.rs  originsrv.rs
components/builder-protocol/src/message/: mod.rs
components/builder-web/: .gitignore  README.md  biome.conf.sample.js  index.html  opensearch.xml  package-lock.json  package.json  tslint.json
components/builder-worker/: Cargo.toml  build.rs
components/builder-worker/habitat/: plan.ps1  plan.sh
components/builder-worker/habitat-dev/: plan.sh
components/builder-worker/habitat/_common/: run
components/builder-worker/habitat/x86_64-linux/: plan.sh
components/builder-worker/habitat/x86_64-linux-kernel2/: plan.sh
components/builder-worker/habitat/x86_64-windows/: plan.ps1
components/builder-worker/src/: config.rs  error.rs  heartbeat.rs  lib.rs  log_forwarder.rs  main.rs  metrics.rs  server.rs  vcs.rs
components/builder-worker/src/runner/: docker.rs  job_streamer.rs  mod.rs  postprocessor.rs  publisher.rs  studio.rs  toml_builder.rs  util.rs  workspace.rs
components/github-api-client/: Cargo.toml
components/github-api-client/src/: config.rs  error.rs  lib.rs  metrics.rs  types.rs
components/oauth-client/: Cargo.toml
components/oauth-client/src/: a2.rs  active_directory.rs  azure_ad.rs  bitbucket.rs  client.rs  config.rs  error.rs  github.rs  gitlab.rs  lib.rs  metrics.rs  okta.rs  types.rs
components/segment-api-client/: Cargo.toml
support/: bash_completion.sh  bldr.env
support/builder/: bio-entrypoint.sh  build_dep_populate.sh  config.sh  init-datastore.sh  s3migrate.sh
support/ci/: builder-base-plan.sh  builder-dev-plan.sh  install_hab.sh  install_protobuf.sh  rustfmt.sh  shared.ps1  shared.sh
support/cycle-tools/: 0_setup_builder.sh  builder-jobsrv.toml  builder-worker.toml  plan_insert.sh
support/linux/: provision.sh
terraform/: instances.tf  load-balancers.tf  s3.tf  security-groups.tf  variables.tf  www.tf
terraform/files/: builder.logrotate  postgres.yaml  sumocollector.service  sup_log.yml
terraform/scripts/: create_bootstrap_bundle.sh  foundation.sh  install_base_packages.sh  install_linux2_packages.sh  linux2_worker_bootstrap.sh  worker_bootstrap.sh
terraform/templates/: bio-sup.init  bio-sup.init.tpl  bio-sup.service  bio-sup.service.tpl  windows_worker_user_data  windows_worker_user_data.tpl
test/: run_cargo_test.sh  run_clippy.ps1  run_clippy.sh
test/builder-api/: README.md  package-lock.json  package.json  test.sh
test/end-to-end/: test_bldr_job_promote_demote
tools/bio-channel-list-pkgs/: README.md
tools/bio_token/: Usage.md  bio-token
tools/merge-databases/: merge-databases.sh
tools/merge-shards/: merge-shards.sh
tools/project_create/: README.md
tools/ssh_helpers/: Usage.md  bio-env  generate-biome-env-tmuxinator.sh  update-biome-ssh
(+308 files in other folders)
