[profile.release]
debug = true

[workspace]
members = [
  "components/artifactory-client",
  "components/builder-api",
  "components/builder-core",
  "components/builder-db",
  "components/builder-graph",
  "components/builder-jobsrv",
  "components/builder-protocol",
  "components/builder-worker",
  "components/github-api-client",
  "components/oauth-client",
  "components/segment-api-client"
]

#[patch."https://github.com/biome-sh/core.git"]
#biome_core = {path = "../core/components/core/"}
#biome_http_client = {path = "../core/components/http-client"}
#biome_win_users = {path = "../core/components/win-users"}
