[package]
name = "artifactory-client"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
log = "*"
futures = "*"
serde = "*"
serde_derive = "*"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"
tag = "v1.6.699"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.tokio]
version = "*"
features = ["fs"]

[dependencies.reqwest]
version = "0.11.6"
features = ["stream"]

[package.metadata.cargo-machete]
ignored = ["serde"]
