[package]
name = "biome_builder_api"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome-Builder HTTP API gateway"
build = "../build-builder.rs"
workspace = "../../"
edition = "2018"

[[bin]]
name = "bldr-api"
path = "src/main.rs"
doc = false

[dependencies]
actix-rt = "*"
bytes = "*"
base64 = "*"
bitflags = "1"
chrono = { version = "*", features = ["serde"] }
cloudevents-sdk = "0.2.0"
cloudevents-sdk-rdkafka = "*"
diesel = { version = "*", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel-derive-enum = { version = "*", features = ["postgres"] }
diesel_full_text_search = "*"
env_logger = "*"
features = "*"
biome-builder-protocol = { path = "../builder-protocol" }
hex = "*"
lazy_static = "*"
log = "*"
num_cpus = "*"
openssl = "=0.10.22"
percent-encoding = "*"
protobuf = "*"
reqwest = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sha2 = "*"
tokio = "*"
toml = { version = "*", default-features = false }
futures = "*"
rand = "*"
r2d2 = "*"
regex = "*"
rusoto_core = "*"
rusoto_s3 = "*"
tempfile = "*"
url = "*"
uuid = { version = "*", features = ["v4"] }

[dependencies.rdkafka]
version = "*"
features = ["ssl"]

[dependencies.memcache]
version = "*"
git = "https://github.com/stevendanna/rust-memcache.git"
branch = "ssd/avoid-short-writes"

[dependencies.actix-web]
version = "*"
default-features = false
features = [ "openssl" ]

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
git = "https://github.com/habitat-sh/rust-zmq"
branch = "v0.8-symlinks-removed"

[dependencies.artifactory-client]
path = "../artifactory-client"

[dependencies.oauth-client]
path = "../oauth-client"

[dependencies.github-api-client]
path = "../github-api-client"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.biome_builder_db]
path = "../builder-db"

