[package]
name = "biome_builder_api"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome-Builder HTTP API gateway"
build = "../build-builder.rs"
workspace = "../../"
edition = "2018"

[[bin]]
name = "bldr-api"
path = "src/main.rs"
doc = false

[dependencies]
actix-rt = "*"
bytes = "*"
base64 = "*"
bitflags = "*"
chrono = { version = "*", features = ["serde"] }
diesel = { version = "*", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel-derive-enum = { version = "*", features = ["postgres"] }
diesel_full_text_search = "*"
env_logger = "*"
features = "*"
biome-builder-protocol = { path = "../builder-protocol" }
hex = "*"
lazy_static = "*"
log = "*"
memcache = "*"
num_cpus = "*"
openssl = "*"
percent-encoding = "*"
protobuf = "*"
reqwest = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sha2 = "*"
toml = { version = "*", default-features = false }
futures = "*"
rand = "*"
r2d2 = "*"
regex = "*"
rusoto_core = "*"
rusoto_s3 = "*"
tempfile = "*"
url = "*"
uuid = { version = "*", features = ["v4"] }
zmq = "*"

[dependencies.actix-web]
version = "*"
default-features = false
features = [ "openssl" ]

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.artifactory-client]
path = "../artifactory-client"

[dependencies.oauth-client]
path = "../oauth-client"

[dependencies.github-api-client]
path = "../github-api-client"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.biome_builder_db]
path = "../builder-db"
