[package]
name = "biome_builder_api"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome-Builder HTTP API gateway"
build = "../build-builder.rs"
workspace = "../../"
edition = "2018"

[[bin]]
name = "bldr-api"
path = "src/main.rs"
doc = false

[dependencies]
actix-rt = "*"
bytes = "*"
bitflags = "2.5.0"
chrono = { version = "*", features = ["serde"] }
env_logger = "0.10.2"
features = "*"
biome-builder-protocol = { path = "../builder-protocol" }
lazy_static = "*"
log = "*"
memcache = "*"
# biome masked: num_cpus = "*"
openssl = "*"
percent-encoding = "*"
protobuf = "*"
# biome masked: reqwest = { version = "*", features = ["blocking", "json"] }
# biome masked: serde = "*"
# biome masked:serde_derive = "*"
# biome masked: serde_json = "*"
sha2 = "*"
futures = "*"
rand = "*"
r2d2 = "*"
regex = "*"
# biome masked: rusoto_core = "*"
# biome masked: rusoto_s3 = "*"
tempfile = "*"
# biome masked: uuid = { version = "*", features = ["v4"] }

# biome core patches
nix = { version = "0.30.1", features = ["signal", "user", "fs"] }
rustls = "0.20.8"
diesel = { version = "2.2.3", features = ["postgres", "chrono", "serde_json", "r2d2"] }
md5 = "0.3.8"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rcgen = "0.8.14"
num_cpus = "1.15.0"
uuid = { version = "1.2.2", features = ["v4"] }
rustls-pemfile = "1.0.1"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
actix-http = "3.3.0"

serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"

[dependencies.actix-web]
# biome masked: version = "*"

# biome core patches
version = "4.3.0"
default-features = false
features = [ "openssl" ]

[dependencies.clap]
# biome masked: version = "*"
version = "2.33.3"
features = [ "suggestions", "color", "unstable" ]

[dependencies.artifactory-client]
path = "../artifactory-client"

[dependencies.oauth-client]
path = "../oauth-client"

[dependencies.github-api-client]
path = "../github-api-client"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"
tag = "v1.6.699"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.biome_builder_db]
path = "../builder-db"
