[package]
name = "builder_core"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
base64 = "*"
bitflags = "*"
chrono = { version = "*", features = ["serde"] }
dogstatsd = "*"
env_proxy = "*"
futures = "*"
futures-util = "*"
glob = "*"
biome-builder-protocol = { path = "../builder-protocol" }
lazy_static = "*"
libarchive = "*"
log = "*"
petgraph = "*"
protobuf = "*"
rand = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
toml = { version = "*", default-features = false }
walkdir = "*"
url = "*"
zmq = "*"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"

[dependencies.reqwest]
version = "*"
features = ["stream"]

[dependencies.tokio]
version = "*"
features = ["fs", "io-util"]

[dev-dependencies]
tempfile = "*"
