[package]
name = "builder_core"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
base64 = "*"
bitflags = "*"
chrono = { version = "*", features = ["serde"] }
dogstatsd = "*"
env_proxy = "*"
glob = "*"
biome-builder-protocol = { path = "../builder-protocol" }
lazy_static = "*"
log = "*"
protobuf = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
toml = { version = "*", default-features = false }
url = "*"
zmq = "*"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"
tag = "v1.6.699"

[dependencies.reqwest]
version = "*"
features = ["stream"]

[dev-dependencies]
tempfile = "*"

[package.metadata.cargo-machete]
ignored = ["zmq"]
