[package]
name = "builder_core"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
# biome masked: base64 = "*"
bitflags = "2.5.0"
chrono = { version = "*", features = ["serde"] }
dogstatsd = "0.6.2"
env_proxy = "*"
glob = "*"
biome-builder-protocol = { path = "../builder-protocol" }
lazy_static = "*"
log = "*"
protobuf = "*"
# biome masked: serde = "*"
# biome masked: serde_derive = "*"
# biome masked: serde_json = "*"
toml = { version = "0.5.9", default-features = false }
url = "*"
zmq = "*"

# biome core
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
base64 = "0.21.0"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"
tag = "v1.6.699"

[dependencies.reqwest]
version = "*"
features = ["stream"]

[dev-dependencies]
tempfile = "*"

[package.metadata.cargo-machete]
ignored = ["zmq"]
