[package]
name = "biome_builder_db"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome-Builder Database Library"
workspace = "../../"
edition = "2018"

[dependencies]
biome-builder-protocol = { path = "../builder-protocol" }
log = "*"
diesel = { version = "*", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel-derive-enum = { version = "*", features = ["postgres"] }
diesel_full_text_search = "*"
diesel_migrations = "*"
itertools = "*"
r2d2 = "*"
rand = "*"
serde = "*"
chrono = { version = "*", features = ["serde"] }
serde_derive = "*"
num_cpus = "*"
protobuf = "*"
fnv = "*"
fallible-iterator = "*"
paste = "*"
percent-encoding = "*"
postgres = "*"
postgres-types = { version = "*", features = ["derive"] }
postgres-shared = "*"
r2d2_postgres = "*"
threadpool = "*"
url = "*"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"

[dependencies.builder_core]
path = "../builder-core"
