[package]
name = "biome_builder_events"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome-Builder EventBus library"
build = "../build-builder.rs"
workspace = "../../"
edition = "2018"

[dependencies]
async-trait = "*"
cloudevents-sdk = "0.2.0"
cloudevents-sdk-rdkafka = "*"
features = "*"
lazy_static = "*"
log = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio = "*"
url = "*"
uuid = { version = "*", features = ["v4"] }

[dependencies.rdkafka]
version = "*"
features = ["ssl"]

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"
