[package]
name = "biome_builder_graph"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome-Builder Graph Dev Tool"
build = "../build-builder.rs"
workspace = "../../"
edition = "2018"

[[bin]]
name = "bldr-graph"
path = "src/main.rs"
doc = false

[dependencies]
bitflags = "*"
clippy = {version = "*", optional = true}
features = "*"
biome-builder-protocol = { path = "../builder-protocol" }
log = "*"
env_logger = "*"
petgraph = "*"
walkdir = "*"
libarchive = "*"
time = "*"
clap = "2"
protobuf = "*"
postgres = "*"
r2d2 = "*"
serde = "*"
serde_derive = "*"
copperline = "*"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.biome_builder_db]
path = "../builder-db"

[build-dependencies]
pkg-config = "0.3"

[features]
default = []
