[package]
name = "biome_builder_graph"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome-Builder Graph Dev Tool"
build = "../build-builder.rs"
workspace = "../../"
edition = "2018"

[lib]
name = "biome_builder_graph"
path = "src/lib.rs"

[[bin]]
name = "bldr-graph"
path = "src/main.rs"
doc = false

[dependencies]
bitflags = "*"
features = "*"
biome-builder-protocol = { path = "../builder-protocol" }
log = "*"
env_logger = "*"
petgraph = "*"
walkdir = "*"
libarchive = "*"
clap = "*"
protobuf = "*"
postgres = "*"
r2d2 = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
copperline = "*"
diesel = "*"
regex = "*"
lazy_static = "*"
itertools = "*"
tempfile = "*"
internment = "*"
tracing = "*"
tracing-subscriber = "*"
tracing-futures = "*"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.biome_builder_db]
path = "../builder-db"

[build-dependencies]
pkg-config = "*"

[features]
default = []
