[package]
name = "biome_builder_notify"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome-Builder Notifications Service"
build = "../build-builder.rs"
workspace = "../../"
edition = "2018"

[[bin]]
name = "bldr-notify"
path = "src/main.rs"
doc = false

[dependencies]
async-trait = "*"
cloudevents-sdk = "0.2.0"
cloudevents-sdk-rdkafka = "*"
configopt = { git = "https://github.com/davidMcneil/configopt.git" }
env_logger = "*"
features = "*"
lazy_static = "*"
log = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
structopt = "*"
tokio = "*"
url = "*"
uuid = { version = "*", features = ["v4"] }

[dependencies.rdkafka]
version = "*"
features = ["ssl"]

[dependencies.builder_core]
path = "../builder-core"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"

[dependencies.biome_builder_events]
path = "../builder-events"
