[package]
name = "biome-builder-protocol"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome Builder Network Server Protocol"
build = "build.rs"
workspace = "../../"
edition = "2018"

[dependencies]
clippy = { version = "*", optional = true }
fnv = "*"
protobuf = "*"
serde = "*"
serde_derive = "*"
regex = "*"
lazy_static = "*"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"

[build-dependencies]
pkg-config = "0.3"
protoc = "*"
protoc-rust = "*"
protobuf-codegen = "*"
