[package]
name = "biome-builder-protocol"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome Builder Network Server Protocol"
build = "build.rs"
workspace = "../../"
edition = "2018"

[dependencies]
clippy = { version = "*", optional = true }
fnv = "*"
# Pin until we are on Rust >= 1.44.0
protobuf = "= 2.14.0"
serde = "*"
serde_derive = "*"
regex = "*"
lazy_static = "*"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"

[build-dependencies]
pkg-config = "0.3"
protoc = "*"
# Pin until we are on Rust >= 1.44.0
protoc-rust = "= 2.14.0"
protobuf-codegen = "*"
