[package]
name = "biome-builder-protocol"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome Builder Network Server Protocol"
build = "build.rs"
workspace = "../../"
edition = "2018"

[dependencies]
# biome masked: protobuf = "*"
serde = "*"

# biome core
protobuf = "2.25.2"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"
tag = "v1.6.699"


[build-dependencies]
protoc-rust = "*"

[package.metadata.cargo-machete]
ignored = ["protoc-rust"]
