[package]
name = "biome_builder_worker"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "Biome-Builder Worker"
build = "build.rs"
workspace = "../../"
edition = "2018"

[[bin]]
name = "bldr-worker"
path = "src/main.rs"
doc = false

[dependencies]
backtrace = "*"
bitflags = "*"
clippy = {version = "*", optional = true}
chrono = { version = "*", features = ["serde"] }
env_logger = "*"
features = "*"
futures = "*"
futures-channel = "*"
git2 = "*"
biome-builder-protocol = { path = "../builder-protocol" }
lazy_static = "*"
log = "*"
protobuf = "*"
retry = { git = "https://github.com/habitat-sh/retry", features = ["asynchronous"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
toml = { version = "*", default-features = false }
url = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
git = "https://github.com/habitat-sh/rust-zmq"
branch = "v0.8-symlinks-removed"

[dependencies.github-api-client]
path = "../github-api-client"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.tokio]
version = "*"
features = ["time"]
