[package]
name = "github-api-client"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
base64 = "*"
frank_jwt = "*"
log = "*"
reqwest = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"

[dependencies.tokio]
version = "*"
features = ["macros", "rt-multi-thread"]

[package.metadata.cargo-machete]
ignored = ["serde"]
