[package]
name = "github-api-client"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
base64 = "*"
# biome masked: frank_jwt = "*"
log = "*"
reqwest = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

# biome core
frank_jwt = "3.1.3"


[dependencies.builder_core]
path = "../builder-core"

[dependencies.biome_core]
git = "https://github.com/biome-sh/biome.git"
tag = "v1.6.699"

[dependencies.tokio]
version = "*"
features = ["macros", "rt-multi-thread"]

[package.metadata.cargo-machete]
ignored = ["serde"]
