[package]
name = "oauth-client"
version = "0.0.0"
authors = ["The Biome Maintainers <humans@biome.sh>"]
description = "OAuth Client"
workspace = "../../"
edition = "2018"

[dependencies]
async-trait = "*"
log = "*"
reqwest = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.builder_core]
path = "../builder-core"

[package.metadata.cargo-machete]
ignored = ["serde"]
